--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.5.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   }
 }
